--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "mangodb": "^1.0.0",
     "mongoose": "^7.4.3",
     "nodemon": "^2.0.22",
