--- a/app/package.json
+++ b/app/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@flowplayer/player": "^3.10.1",
+    "@flowplayer/react-flowplayer": "^1.2.2",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vidstack/react": "^1.10.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "flowplayer": "^7.2.7",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "npm": "^10.2.3",
@@ -20,10 +24,14 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-native-video-player": "^0.14.0",
+    "react-player": "^2.14.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-video-thumbnail": "^0.1.3",
+    "react-waypoint": "^10.3.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +57,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "video.js": "^8.10.0"
   }
 }
